--- a/index.html
+++ b/index.html
@@ -23,15 +23,28 @@
                     <a href="./youzhi/index.html" class="tool-button" target="content_frame">
                         釉式轉原料
                     </a>
+                    <a href="./jiaoxue/sanjiao.html" class="tool-button" target="content_frame">
+                        三角座標計算教學
+                    </a>
+                    <a href="./jiaoxue/sege.html" class="tool-button" target="content_frame">
+                        賽格式計算教學
+                    </a>
+                    <a href="./info/suppliers.html" class="tool-button" target="content_frame">
+                        原料廠商
+                    </a>
                 </div>
 
                 <div class="white-buttons-group">
                     <a href="https://www.facebook.com/aawen.huang" target="_blank" class="social-button facebook-btn">Facebook</a>
+                    <a href="./game/index.html" target="_blank" class="social-button facebook-btn">天堂小遊戲</a>
                     <a href="https://www.instagram.com/aawenhuang/" target="_blank" class="social-button instagram-btn">Instagram</a>
-                    <a href="https://www.facebook.com/profile.php?id=100063821328990" target="_blank" class="social-button workshop-btn">炎變の燒－陶藝創作工作坊</a>
+                    <a href="https://www.facebook.com/profile.php?id=100063821328990" target="_blank" class="social-button workshop-btn">炎變の燒</a>
+                    
                     <a href="https://www.youtube.com/watch?v=2Ds7vXhIpbY&list=PLJLeUnJWf_fvSa-NoPrj4NoHtp_n88qQa" target="_blank" class="main-link">
-                        ✨ 課程影片完整播放清單 (新視窗) ✨
+                        ✨ 課程影片 ✨
                     </a>
+
+
                 </div>
             </div>
             </div>
