--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </a>
 
                     <!-- 3. [修正] 雙向轉換 (金 -> 白 -> 金) + 紅綠圖示 -->
-                    <a href="#" target="content_frame" class="nav-btn double" title="新功能開發中">
+                    <a href="./welcome-2.html" target="content_frame" class="nav-btn double" title="新功能開發中">
                         <!-- 第一個 icon: 燒瓶 (鮮紅) -->
                         <i class="fa-solid fa-flask"></i> 
                         <span style="font-size: 0.8em;">+</span> 
