--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
     <!-- 引入 Font Awesome 用於圖示 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+   <!-- 這代表：「親愛的 Google，請**索引 (Index)** 這個頁面，並且**跟隨 (Follow)** 頁面上的連結去抓取更多頁面。」
+完成這些後，您的網站 SEO 基礎建設就非常穩固了！接下來就是等待時間發酵，讓大家在網路上搜到您的專業心血！ 🏺🚀 -->
+  <meta name="robots" content="index, follow">
+
+
     <style>
         /* --- CSS 樣式保持不變，直接沿用您滿意的版本 --- */
         /* --- 1. 全局變數定義 --- */
